--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@biodiversity/vue-authentication",
-  "version": "0.1.1",
+  "name": "@scbd/vue-authentication",
+  "version": "0.0.3",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build src/Authentication.js --target lib --name VueAuthentication",
@@ -9,7 +9,8 @@
   },
   "main": "dist/VueAuthentication.umd.min.js",
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "vue": "^2.5.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.16",
